--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "axios": "^1.6.7",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
