--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
